qbs (1.7.0+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 20 Dec 2016 15:33:48 +0300

qbs (1.6.1+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Refresh skip_test_concurrent.diff.
  * Update debian/libqbscore1.symbols from buildds’ logs.
  * Fix description-synopsis-starts-with-article Lintian warning.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 13 Nov 2016 19:25:30 +0300

qbs (1.6.0+dfsg-2) unstable; urgency=medium

  * Update debian/libqbscore1.symbols from buildds’ logs.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 07 Sep 2016 12:04:38 +0300

qbs (1.6.0+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Set $HOME to a temporary location when running tests.
  * Drop skip_test_homedirectory.diff, no longer needed.
  * Refresh other patches.
  * Update install files for the new release.
  * Update debian/libqbscore1.symbols from amd64 and i386 build logs.
  * Fix two Lintian errors about package descriptions.
  * Bump required Qt version to 5.4.0, following upstream.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 03 Sep 2016 14:43:46 +0300

qbs (1.5.2+dfsg-1) unstable; urgency=medium

  [ Adam Majer ]
  * Remove /usr/include from INCLUDEPATH list of installed
    .pri file. Adding this default included path causes FTBFS
    for software using qbs with GCC 6 (fix_ftbfs_gcc6.diff)
    (closes: #831182)

  [ Dmitry Shachnev ]
  * New upstream release.
  * Drop kfreebsd.diff, a similar patch was applied upstream.
  * Avoid using the Qt Build Suite term, following upstream.

 -- Adam Majer <adamm@zombino.com>  Tue, 02 Aug 2016 00:04:16 +0200

qbs (1.5.1+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Refresh skip_test_concurrent.diff.
  * Drop the rules to remove empty directories in documentation, qdoc no
    longer creates them (since Qt 5.6.1).

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 18 Jun 2016 12:11:44 +0300
