@@ -5,7 +5,7 @@ Last-Update: 2016-03-20
 
 --- a/tests/auto/blackbox/tst_blackbox.cpp
 +++ b/tests/auto/blackbox/tst_blackbox.cpp
-@@ -1171,6 +1171,7 @@
+@@ -967,6 +967,7 @@
  
  void TestBlackbox::concurrentExecutor()
  {
