@@ -1,6 +1,7 @@
 qbs (1.7.0+dfsg-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Refresh and rebase the patches for the new release.
 
  -- Dmitry Shachnev <mitya57@debian.org>  Tue, 20 Dec 2016 15:33:48 +0300
 
